--- a/src/main/resources/assets/css/components.css
+++ b/src/main/resources/assets/css/components.css
@@ -3,11 +3,12 @@
    ================================================= */
 .topbar {
     -fx-effect: -app-soft-shadow;
-    -fx-background-color: -app-bg-color;
+    -fx-background-color: -app-surface-color;
     -fx-background-radius: 10;
     -fx-border-radius: 10;
     -fx-border-color: -app-border-color;
     -fx-border-width: 1;
+    -fx-text-fill: -app-icon-color;
 }
 
 /* =================================================
@@ -246,10 +247,12 @@
 }
 
 .card-btn:hover {
+    -fx-translate-y: -3;
     -fx-background-color: -app-primary-hover-color;
 }
 
 .card-btn:pressed {
+    -fx-translate-y: 0;
     -fx-background-color: -app-secondary-color;
 }
 
@@ -379,6 +382,20 @@
     );
 }
 
+.radio-button.inactive {
+    -fx-opacity: 1;
+    -fx-cursor: default;
+
+    -fx-text-fill: rgba(220, 38, 38, 0.95);
+    -fx-border-color: rgba(220, 38, 38, 0.55);
+
+    -fx-background-color: linear-gradient(
+        to bottom,
+        rgba(220, 38, 38, 0.18),
+        rgba(220, 38, 38, 0.08)
+    );
+}
+
 .type-row {
     -fx-padding: 2 0 0 0;
 }
@@ -396,7 +413,7 @@
     -fx-pref-height: 12;
     -fx-min-height: 12;
     -fx-max-height: 12;
-    -fx-background-color: -app-icon-color;
+    -fx-background-color: -app-primary-color;
     -fx-background-radius: 999;
 }
 
@@ -410,7 +427,7 @@
     -fx-pref-width: 10;
     -fx-min-width: 10;
     -fx-max-width: 10;
-    -fx-background-color: -app-icon-color;
+    -fx-background-color: -app-primary-color;
     -fx-background-radius: 999;
 }
 
@@ -425,4 +442,29 @@
 .card.status-confirmed {
     -fx-background-color: rgba(240, 255, 240, 0.9);
     -fx-border-color: rgba(240, 255, 240, 0.6);
+}
+
+/* =================================================
+   Edit Avatar Photo
+   ================================================= */
+
+.avatar-host{
+    -fx-border-color: #000000;
+    -fx-border-width: 1px;
+    -fx-border-radius: 999;
+    -fx-background-radius: 999;
+}
+
+.edit-avatar-btn{
+    -fx-background-color: rgba(0,0,0,0.55);
+    -fx-text-fill: white;
+    -fx-background-radius: 0 0 999 999;
+    -fx-padding: 6 16 6 16;
+    -fx-font-size: 12px;
+    -fx-cursor: hand;
+    -fx-max-width: 177px;
+}
+
+.edit-avatar-btn:hover{
+    -fx-background-color: rgba(0,0,0,0.70);
 }
