--- a/src/main/resources/views/Booking.fxml
+++ b/src/main/resources/views/Booking.fxml
@@ -1,38 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
 <?import javafx.geometry.Insets?>
-<AnchorPane styleClass="container" xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.cakeshopsystem.controllers.BookingController">
-    <VBox spacing="20" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+
+<AnchorPane styleClass="container" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.BookingController">
+    <VBox spacing="20" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
         <!-- horizontal scrollers -->
-        <ScrollPane fx:id="spCustomOrder" fitToHeight="true" pannable="true" vbarPolicy="NEVER">
-            <VBox spacing="10">
-                <Label styleClass="title" text="Custom Cake Orders"/>
-                <HBox fx:id="hbCustomOrder" spacing="30">
+        <VBox spacing="20">
+            <Label styleClass="title" text="Custom Cake Orders" />
+            <ScrollPane fx:id="spCustomOrder" fitToHeight="true" minViewportHeight="100.0" vbarPolicy="NEVER">
+                <HBox fx:id="hbCustomOrder" alignment="CENTER_LEFT" spacing="20">
                     <padding>
-                        <Insets bottom="20" left="20" right="20" top="20"/>
+                        <Insets bottom="20" left="20" right="20" top="20" />
                     </padding>
                 </HBox>
-            </VBox>
-        </ScrollPane>
+            </ScrollPane>
+        </VBox>
 
+        <VBox spacing="20.0">
+            <Label styleClass="title" text="DIY Session Bookings" />
+            <ScrollPane fx:id="spDiyOrder" fitToHeight="true" minViewportHeight="100.0" vbarPolicy="NEVER">
+                    <HBox fx:id="hbDiyOrder" alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT" spacing="20">
+                        <padding>
+                            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                        </padding>
+                    </HBox>
+            </ScrollPane>
+        </VBox>
 
-        <ScrollPane fx:id="spDiyOrder" fitToHeight="true" vbarPolicy="NEVER">
-            <VBox>
-                <Label styleClass="title" text="DIY Session Bookings"/>
-                <HBox fx:id="hbDiyOrder" spacing="20">
-                    <padding>
-                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-                    </padding>
-                </HBox>
-            </VBox>
-        </ScrollPane>
     </VBox>
 </AnchorPane>
