--- a/src/main/resources/assets/css/variable.css
+++ b/src/main/resources/assets/css/variable.css
@@ -1,33 +1,8 @@
 /* =========================
    Global Theme Variables
    ========================= */
-   /*
-.root {
 
-    -fx-text-color: #5A273B;
-
-    -fx-bg-color: linear-gradient(to bottom right, #FFF5E4, #FFE9D2);
-    -fx-container-bg: #FFF5E4;
-    -fx-container-border-color: rgba(255, 245, 228, 0.90);
-    -fx-control-inner-background: #FFE9D2;
-
-    -fx-primary-color: #EE6983;
-    -fx-secondary-color: #FFC4C4;
-    -fx-accent-color: #74071B;
-
-    -fx-button-text-color: #FFF;
-
-    -fx-soft-shadow: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 8, 0.2, 0, 2);
-    -fx-strong-shadow: dropshadow(gaussian, rgba(0, 0, 0, 0.6), 16, 0.3, 0, 4);
-
-    -fx-error-color: #E63946;
-    -fx-success-color: #2ECC71;
-    -fx-warning-color: #F39C12;
-    -fx-info-color: #3498DB;
-}
-*/
-
-
+/*
 .root {
     -app-base-text-color : #0B1220;
     -app-muted-text-color : #4B5563;
@@ -46,6 +21,34 @@
     -app-strong-shadow: dropshadow(gaussian, rgba(0, 0, 0, 0.6), 16, 0.3, 0, 4);
 
     -app-icon-color : #94A3B8;
+
+    -app-success-color : #22C55E;
+    -app-error-color : #EF4444;
+    -app-warning-color : #F59E0B;
+    -app-info-color : #38BDF8;
+}
+*/
+
+.root {
+    -app-base-text-color : #532A09;
+    -app-muted-text-color : #4B5563;
+
+    -app-bg-color : #E2D6AC;
+    -app-border-color : #C4B28A;
+
+    -app-surface-color : #F5ECD5;
+    -app-surface-hover-color : #E8DEC3;
+
+    -app-primary-color : #AD8042;
+    -app-primary-hover-color : #8F6935;
+
+    -app-secondary-color : #7B4618;
+    -app-accent-color : #2E401C;
+
+    -app-soft-shadow: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 8, 0.2, 0, 2);
+    -app-strong-shadow: dropshadow(gaussian, rgba(0, 0, 0, 0.6), 16, 0.3, 0, 4);
+
+    -app-icon-color : #6B4226;
 
     -app-success-color : #22C55E;
     -app-error-color : #EF4444;
