--- a/src/main/resources/views/EditPaymentConfig.fxml
+++ b/src/main/resources/views/EditPaymentConfig.fxml
@@ -6,12 +6,21 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import javafx.geometry.Insets?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.cakeshopsystem.controllers.EditPaymentConfigController"
-            prefHeight="400.0" prefWidth="600.0">
+            fx:controller="com.cakeshopsystem.controllers.EditPaymentConfigController">
+    <padding>
+        <Insets top="25.0" right="25.0" bottom="25.0" left="25.0"/>
+    </padding>
     <VBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
           AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <Label styleClass="title" text="Payment Configuration"/>
+        <VBox fx:id="vbPaymentContainer" spacing="20.0"/>
+        <!-- Action buttons -->
+        <HBox alignment="CENTER_RIGHT" spacing="10.0">
+            <Button fx:id="btnCancel" mnemonicParsing="false" styleClass="cancel-btn" text="Cancel" />
+            <Button fx:id="btnSave" mnemonicParsing="false" text="Save Changes" />
+        </HBox>
     </VBox>
 </AnchorPane>
