--- a/src/main/resources/views/admin/AdminDashboard.fxml
+++ b/src/main/resources/views/admin/AdminDashboard.fxml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
 
-<AnchorPane styleClass="container" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.admin.AdminDashboardController">
-   <children>
-      <BorderPane fx:id="dashboardPane" layoutX="187.0" layoutY="75.0" AnchorPane.bottomAnchor="20.0"
-                  AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
-         <top>
-            <ToolBar BorderPane.alignment="CENTER">
-              <items>
+<?import javafx.scene.layout.HBox?>
+<AnchorPane prefHeight="600.0" prefWidth="900.0" styleClass="container" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.admin.AdminDashboardController">
+    <BorderPane fx:id="dashboardPane" layoutX="187.0" layoutY="75.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+        <top>
+            <HBox spacing="20.0" BorderPane.alignment="CENTER">
+                <Button fx:id="salesProductBtn" mnemonicParsing="false" onAction="#clickSalesProductBtn" text="Sales Product" />
                 <Button fx:id="revenueBtn" mnemonicParsing="false" onAction="#clickRevenueBtn" text="Revenue" />
-                  <Button fx:id="salesProductBtn" mnemonicParsing="false" onAction="#clickSalesProductBtn" text="Sales Product" />
-                  <Button fx:id="staffPerformanceBtn" mnemonicParsing="false" onAction="#clickStaffPerformanceBtn" text="Staff Performance" />
-              </items>
-            </ToolBar>
-         </top>
-         <center>
-            <StackPane fx:id="contentPane" BorderPane.alignment="CENTER" />
-         </center>
-      </BorderPane>
-   </children>
+                <Button fx:id="staffPerformanceBtn" mnemonicParsing="false" onAction="#clickStaffPerformanceBtn" text="Staff Performance" />
+            </HBox>
+        </top>
+        <center>
+          <StackPane fx:id="contentPane" BorderPane.alignment="CENTER">
+            <padding>
+               <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            </padding></StackPane>
+        </center>
+    </BorderPane>
 </AnchorPane>
