--- a/src/main/resources/views/admin/Revenue.fxml
+++ b/src/main/resources/views/admin/Revenue.fxml
@@ -12,140 +12,93 @@
 <?import javafx.scene.layout.VBox?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.admin.RevenueController">
-   <children>
-      <VBox layoutX="39.0" layoutY="14.0">
-         <children>
-            <HBox prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <HBox fx:id="totalMembersCard" prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <VBox prefHeight="200.0" prefWidth="100.0">
-                           <children>
-                              <FontIcon />
-                           </children>
-                        </VBox>
-                        <VBox prefHeight="200.0" prefWidth="100.0">
-                           <children>
-                              <HBox prefHeight="44.0" prefWidth="100.0">
-                                 <children>
-                                    <Label fx:id="lblTotalMembers" text="Total Members" />
-                                 </children>
-                              </HBox>
-                              <HBox prefHeight="50.0" prefWidth="100.0">
-                                 <children>
-                                    <Label fx:id="lblTotalMembersResult" text="0" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </VBox>
-                     </children>
-                  </HBox>
-                  <HBox fx:id="totalOrdersCard" prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <VBox prefHeight="200.0" prefWidth="100.0">
-                           <children>
-                              <FontIcon />
-                           </children>
-                        </VBox>
-                        <VBox prefHeight="200.0" prefWidth="100.0">
-                           <children>
-                              <HBox prefHeight="48.0" prefWidth="100.0">
-                                 <children>
-                                    <Label fx:id="lblTotalOrders" text="Total Orders" />
-                                 </children>
-                              </HBox>
-                              <HBox prefHeight="48.0" prefWidth="100.0">
-                                 <children>
-                                    <Label fx:id="lblTotalOrdersResult" text="0" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </VBox>
-                     </children>
-                  </HBox>
-               </children>
+<AnchorPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.admin.RevenueController">
+    <VBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <VBox alignment="CENTER" spacing="20.0" AnchorPane.leftAnchor="39.0">
+
+            <HBox alignment="CENTER" spacing="20.0">
+                <!-- Total Member -->
+                <HBox fx:id="totalMembersCard" styleClass="card" spacing="20.0">
+                    <VBox alignment="CENTER">
+                        <FontIcon iconLiteral="fas-users" iconSize="32"/>
+                    </VBox>
+                    <VBox alignment="CENTER" spacing="10">
+                        <HBox>
+                            <Label fx:id="lblTotalMembers" text="Total Members" />
+                        </HBox>
+                        <HBox alignment="CENTER">
+                            <Label fx:id="lblTotalMembersResult" text="0" />
+                        </HBox>
+                    </VBox>
+                </HBox>
+
+                <!-- Total Orders -->
+                <HBox fx:id="totalOrdersCard" styleClass="card" spacing="20.0">
+                    <VBox alignment="CENTER">
+                        <FontIcon iconLiteral="fas-receipt" iconSize="32"/>
+                    </VBox>
+                    <VBox alignment="CENTER" spacing="10">
+                        <HBox>
+                            <Label fx:id="lblTotalOrders" text="Total Orders" />
+                        </HBox>
+                        <HBox alignment="CENTER">
+                            <Label fx:id="lblTotalOrdersResult" text="0" />
+                        </HBox>
+                    </VBox>
+                </HBox>
             </HBox>
-            <HBox prefHeight="90.0" prefWidth="491.0">
-               <children>
-                  <HBox fx:id="totalSalesCard" prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <VBox prefHeight="200.0" prefWidth="100.0">
-                           <children>
-                              <FontIcon />
-                           </children>
-                        </VBox>
-                        <VBox prefHeight="200.0" prefWidth="100.0">
-                           <children>
-                              <HBox prefHeight="46.0" prefWidth="100.0">
-                                 <children>
-                                    <Label fx:id="lblTotalSales" text="Total Sales" />
-                                 </children>
-                              </HBox>
-                              <HBox prefHeight="50.0" prefWidth="100.0">
-                                 <children>
-                                    <Label fx:id="lblTotalSalesResult" text="0" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </VBox>
-                     </children>
-                  </HBox>
-                  <HBox fx:id="totalCancelCard" prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <VBox prefHeight="200.0" prefWidth="100.0">
-                           <children>
-                              <FontIcon />
-                           </children>
-                        </VBox>
-                        <VBox prefHeight="200.0" prefWidth="100.0">
-                           <children>
-                              <HBox prefHeight="44.0" prefWidth="100.0">
-                                 <children>
-                                    <Label fx:id="lblTotalCancel" text="Total Cancel" />
-                                 </children>
-                              </HBox>
-                              <HBox prefHeight="50.0" prefWidth="100.0">
-                                 <children>
-                                    <Label fx:id="lblTotalCancelResult" text="0" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </VBox>
-                     </children>
-                  </HBox>
-               </children>
+
+            <HBox alignment="CENTER" prefHeight="90.0" prefWidth="491.0" spacing="20.0">
+
+                <!-- Total Sales -->
+                <HBox fx:id="totalSalesCard" styleClass="card" spacing="20.0">
+                    <VBox alignment="CENTER">
+                        <FontIcon iconLiteral="fas-coins" iconSize="32"/>
+                    </VBox>
+                    <VBox alignment="CENTER" spacing="10">
+                        <HBox>
+                            <Label fx:id="lblTotalSales" text="Total Sales" />
+                        </HBox>
+                        <HBox alignment="CENTER">
+                            <Label fx:id="lblTotalSalesResult" text="0" />
+                        </HBox>
+                    </VBox>
+                </HBox>
+
+                <!-- Total Cancel -->
+                <HBox fx:id="totalCancelCard" styleClass="card" spacing="20.0">
+                    <VBox alignment="CENTER">
+                        <FontIcon iconLiteral="fas-ban" iconSize="32"/>
+                    </VBox>
+                    <VBox alignment="CENTER" spacing="10">
+                        <HBox>
+                            <Label fx:id="lblTotalCancel" text="Total Cancel" />
+                        </HBox>
+                        <HBox alignment="CENTER">
+                            <Label fx:id="lblTotalCancelResult" text="0" />
+                        </HBox>
+                    </VBox>
+                </HBox>
+
             </HBox>
-         </children>
-      </VBox>
-      <HBox layoutX="14.0" layoutY="214.0" prefHeight="74.0" prefWidth="564.0">
-         <children>
+        </VBox>
+
+        <HBox alignment="CENTER" spacing="20.0">
             <ComboBox fx:id="filterCategory" prefWidth="150.0" />
             <ComboBox fx:id="filterDate" prefWidth="150.0" />
             <DatePicker fx:id="customDatePicker" />
             <Button fx:id="refreshBtn" mnemonicParsing="false" onAction="#clickRefreshChartBtn" text="Refresh" />
-         </children>
-      </HBox>
-      <HBox layoutX="453.0" prefHeight="201.0" prefWidth="200.0">
-         <children>
-            <VBox prefHeight="200.0" prefWidth="100.0">
-               <children>
-                  <FontIcon />
-               </children>
-            </VBox>
-         </children>
-      </HBox>
-      <VBox layoutX="14.0" layoutY="260.0">
-         <children>
+        </HBox>
+
+        <VBox alignment="CENTER" layoutX="14.0" layoutY="260.0">
             <LineChart fx:id="revenueLineChart">
-              <xAxis>
-                <CategoryAxis fx:id="xAxis" label="Date"/>
-              </xAxis>
-              <yAxis>
-                <NumberAxis fx:id="yAxis" label="Revenue (MMK)" />
-              </yAxis>
+                <xAxis>
+                    <CategoryAxis label="Date" fx:id="xAxis" />
+                </xAxis>
+                <yAxis>
+                    <NumberAxis fx:id="yAxis" label="Revenue (MMK)" />
+                </yAxis>
             </LineChart>
-         </children>
-      </VBox>
-   </children>
+        </VBox>
+    </VBox>
 </AnchorPane>
