--- a/src/main/resources/views/Main.fxml
+++ b/src/main/resources/views/Main.fxml
@@ -14,70 +14,61 @@
 <?import javafx.scene.shape.Circle?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<StackPane fx:id="mainStackPane" minHeight="500.0" xmlns="http://javafx.com/javafx/25"
-           xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.MainController">
+<StackPane fx:id="mainStackPane" minHeight="500.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.MainController">
     <BorderPane fx:id="mainBorderPane">
         <!-- TOP BAR -->
         <top>
-            <HBox fx:id="topBar" alignment="TOP_CENTER" spacing="30.0" styleClass="topbar"
-                  BorderPane.alignment="CENTER">
+            <HBox fx:id="topBar" alignment="TOP_CENTER" spacing="30.0" styleClass="topbar" BorderPane.alignment="CENTER">
                 <BorderPane.margin>
-                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                 </BorderPane.margin>
                 <padding>
-                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                    <Insets bottom="5.0" left="15.0" right="5.0" top="5.0" />
                 </padding>
                 <HBox spacing="20.0">
-                    <ImageView fx:id="profileImageView" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true"
-                               preserveRatio="true"/>
+                    <ImageView fx:id="profileImageView" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
                     <VBox alignment="CENTER_LEFT" spacing="20.0">
-                        <Label fx:id="usernameLabel" text="Username"/>
-                        <Label fx:id="roleLabel" text="Role"/>
+                        <Label fx:id="usernameLabel" text="Username" />
+                        <Label fx:id="roleLabel" text="Role" />
                     </VBox>
                 </HBox>
                 <HBox alignment="CENTER" prefHeight="38.0" prefWidth="481.0" spacing="20.0" HBox.hgrow="ALWAYS">
-                    <Hyperlink fx:id="adminDashboardLink" minWidth="-Infinity" text="Dashboard"/>
-                    <Hyperlink fx:id="userLink" minWidth="-Infinity" text="User"/>
-                    <Hyperlink fx:id="adminProductLink" minWidth="-Infinity" text="Product"/>
-                    <Hyperlink fx:id="memberLink" minWidth="-Infinity" text="Member"/>
-                    <Hyperlink fx:id="staffProductLink" minWidth="-Infinity" text="Product"/>
-                    <Hyperlink fx:id="customOrderLink" minWidth="-Infinity" text="Custom Order"/>
-                    <Hyperlink fx:id="diyOrderLink" minWidth="-Infinity" text="DIY"/>
-                    <Hyperlink fx:id="bookingLink" minWidth="-Infinity" text="Booking"/>
+                    <Hyperlink fx:id="dashboardLink" minWidth="-Infinity" text="Dashboard" />
+                    <Hyperlink fx:id="userLink" minWidth="-Infinity" text="User" />
+                    <Hyperlink fx:id="adminProductLink" minWidth="-Infinity" text="Product" />
+                    <Hyperlink fx:id="memberLink" minWidth="-Infinity" text="Member" />
+                    <Hyperlink fx:id="staffProductLink" minWidth="-Infinity" text="Product" />
+                    <Hyperlink fx:id="customOrderLink" minWidth="-Infinity" text="Custom Order" />
+                    <Hyperlink fx:id="diyOrderLink" minWidth="-Infinity" text="DIY" />
+                    <Hyperlink fx:id="bookingLink" minWidth="-Infinity" text="Booking" />
                 </HBox>
                 <HBox alignment="CENTER" spacing="20.0">
                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </padding>
-                    <FontIcon fx:id="moonIcon" iconLiteral="fas-moon" iconSize="24" styleClass="icon-clickable"/>
-                    <FontIcon fx:id="settingIcon" iconLiteral="fas-cog" iconSize="24" styleClass="icon-clickable"/>
-                    <FontIcon fx:id="signOutIcon" iconLiteral="fas-sign-out-alt" iconSize="24"
-                              styleClass="icon-clickable"/>
+                    <FontIcon fx:id="moonIcon" iconLiteral="fas-moon" iconSize="24" styleClass="icon-clickable" />
+                    <FontIcon fx:id="settingIcon" iconLiteral="fas-cog" iconSize="24" styleClass="icon-clickable" />
+                    <FontIcon fx:id="signOutIcon" iconLiteral="fas-sign-out-alt" iconSize="24" styleClass="icon-clickable" />
                 </HBox>
             </HBox>
         </top>
         <!-- CENTER CONTENT -->
         <center>
-            <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="750.0"
-                        BorderPane.alignment="CENTER">
-                <AnchorPane fx:id="contentPane" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="20.0"
-                            AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0"/>
+            <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="750.0" BorderPane.alignment="CENTER">
+                <AnchorPane fx:id="contentPane" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" />
                 <!-- Breadcrumb Bar -->
-                <BreadcrumbBar fx:id="breadcrumbBar" prefHeight="30.0" alignment="CENTER_LEFT"
-                               styleClass="breadcrumb-container"
-                               AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
+                <BreadcrumbBar fx:id="breadcrumbBar" alignment="CENTER_LEFT" prefHeight="30.0" styleClass="breadcrumb-container" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
 
                 <!-- Cart Button with Notification Dot -->
                 <StackPane fx:id="badgePane" AnchorPane.bottomAnchor="40.0" AnchorPane.rightAnchor="20.0">
                     <Button fx:id="cartBtn" mnemonicParsing="false" text="Cart">
                         <graphic>
-                            <FontIcon iconLiteral="fas-cart-plus" iconSize="24" styleClass="cart-icon"/>
+                            <FontIcon iconLiteral="fas-cart-plus" iconSize="24" styleClass="cart-icon" />
                         </graphic>
                     </Button>
-                    <Circle fill="RED" radius="9" translateX="40.0" translateY="-14.0"/>
+                    <Circle fill="RED" radius="9" translateX="40.0" translateY="-14.0" />
 
-                    <Label fx:id="badgeLabel" style="-fx-text-fill: white; -fx-font-size: 10px; -fx-font-weight: bold;"
-                           text="0" translateX="40.0" translateY="-14.0"/>
+                    <Label fx:id="badgeLabel" style="-fx-text-fill: white; -fx-font-size: 10px; -fx-font-weight: bold;" text="0" translateX="40.0" translateY="-14.0" />
                 </StackPane>
 
             </AnchorPane>
@@ -95,11 +86,9 @@
     <!--        </StackPane>-->
 
     <!--    </AnchorPane>-->
-    <AnchorPane fx:id="overlayPane" managed="false" visible="false" style="-fx-background-color: rgba(0,0,0,0.4);">
+    <AnchorPane fx:id="overlayPane" managed="false" style="-fx-background-color: rgba(0,0,0,0.4);" visible="false">
 
-        <StackPane fx:id="popupPane"
-                   AnchorPane.topAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                   AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" onMouseClicked="#handleOverlayClick"/>
+        <StackPane fx:id="popupPane" onMouseClicked="#handleOverlayClick" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
     </AnchorPane>
 
 
