--- a/src/main/resources/views/admin/UserCard.fxml
+++ b/src/main/resources/views/admin/UserCard.fxml
@@ -5,11 +5,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefWidth="100.0" spacing="10" styleClass="card" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.admin.UserCardController">
+<VBox alignment="CENTER" prefWidth="200.0" prefHeight="200.0" spacing="10" styleClass="card" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.admin.UserCardController">
 
-    <ImageView fx:id="userImage" fitHeight="137.0" fitWidth="162.0" pickOnBounds="true" preserveRatio="true" />
+    <ImageView fx:id="userImage" pickOnBounds="true" preserveRatio="true" />
 
-    <Label fx:id="lblUserName" />
+    <Label fx:id="lblUserName" styleClass="sub-title"/>
 
     <Label fx:id="lblOrderCount" text="Orders: 0" />
    <padding>
