--- a/src/main/resources/views/BookingCard.fxml
+++ b/src/main/resources/views/BookingCard.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
@@ -14,6 +13,9 @@
            fx:controller="com.cakeshopsystem.controllers.BookingCardController">
 
     <VBox fx:id="vbBookingCard" minWidth="200.0" spacing="10" styleClass="card-body">
+        <!-- Phone Number -->
+        <Label fx:id="lblMemberPhone" text="Member Phone number"/>
+
         <!-- Name -->
         <Label fx:id="lblBookingName" styleClass="card-header" text="Booking Name" wrapText="true"/>
 
