--- a/src/main/resources/views/admin/MemberView.fxml
+++ b/src/main/resources/views/admin/MemberView.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.layout.StackPane?>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 <AnchorPane styleClass="container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
             prefHeight="400.0"
             prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1"
@@ -16,12 +18,20 @@
           spacing="20.0" AnchorPane.bottomAnchor="20.0"
           AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
         <HBox alignment="TOP_RIGHT">
-            <TextField fx:id="txtSearch" promptText="Search"/>
+            <StackPane>
+                <TextField fx:id="txtSearch" promptText="Search" styleClass="login-text-field"/>
+                <FontIcon iconLiteral="fas-search"
+                          iconSize="18"
+                          StackPane.alignment="CENTER_LEFT"
+                          translateX="12"
+                          styleClass="search-icon"/>
+            </StackPane>
         </HBox>
         <TableView fx:id="memberTableView" VBox.vgrow="ALWAYS">
             <columns>
                 <TableColumn fx:id="colName" minWidth="200.0" text="Name"/>
                 <TableColumn fx:id="colPhoneNumber" minWidth="200.0" text="Phone Number"/>
+                <TableColumn fx:id="colMemberSince" minWidth="200.0" text="Member Since"/>
             </columns>
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
